tests/typing/good/testfile-shadowing-2.scala

class E(x: Int) { def m() { var x = true } }
object Main { def main(args: Array[String]) { } }
