tests/typing/bad/testfile-nomatch1-1.scala
class A {
    def f() { var x: Int = m(1) };
    def m() {}
}
object Main { def main(args: Array[String]) { } }
